paper-tab text color변경: 배경이 까만색에 회색 Font Color로 되어 있어 잘 보이지 않음.

--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -29,6 +29,9 @@ Copyright © HatioLab Inc. All rights reserved.
                 color: var(--things-secondary-background-color);
                 font-weight: bold;
             }
+            --paper-tabs-content:{
+                color: var(--things-sidebar-text-color);
+            }
             --paper-card-background-color:#fff;
 
             /* brand btn */
