dialog background color primary color로 설정

--- a/app/elements/theme/anythings-theme.html
+++ b/app/elements/theme/anythings-theme.html
@@ -32,6 +32,7 @@ Copyright © HatioLab Inc. All rights reserved.
             --paper-tabs-content:{
                 color: var(--things-sidebar-text-color);
             }
+            --paper-dialog-background-color: var(--things-primary-background-color);
             --paper-card-background-color:#fff;
 
             /* brand btn */
@@ -103,7 +104,8 @@ Copyright © HatioLab Inc. All rights reserved.
           --things-focus-background-color: #f7af01;
           --things-whitegrey-background-color:#3c3c3c;
           --things-lightgrey-background-color:rgba(0, 0, 0, .1);
-          --things-white-background-color:#fff;
+          /* --things-white-background-color:#fff; */
+          --things-white-background-color:transparent;
           --things-error-color:var(--paper-deep-orange-700);
           --things-primary-text-color: #ababab;
           --things-dark-text-color: #585858;
