--- a/app/elements/logis/anythings-sku.html
+++ b/app/elements/logis/anythings-sku.html
@@ -57,8 +57,7 @@ Copyright © HatioLab Inc. All rights reserved.
         'receive-sku-ajax.things-ajax-response': '_endReceivingSku',
         'grid.show-sku-cd-btn-tap': '_showBarcode',
         'grid.show-sku-barcd-btn-tap': '_showBarcode',
-        'grid.show-box-barcd-btn-tap': '_showBarcode',
-
+        'grid.show-box-barcd-btn-tap': '_showBarcode'
       },
 
       /**
@@ -66,7 +65,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _receiveBtnTapped: function (event) {
+      _receiveBtnTapped: function(event) {
         var comCd = this._checkForReceive();
         if (comCd) {
           this._readyToReceive(event, comCd);
@@ -79,7 +78,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @param {Object} event
        * @param {String} comCd
        */
-      _readyToReceive: function (event, comCd) {
+      _readyToReceive: function(event, comCd) {
         var title = Things.DataGlobal.t(event.detail.text);
         var ajax = this.$['ready-to-receive-sku-ajax'];
         ajax.resourceId = comCd;
@@ -90,14 +89,20 @@ Copyright © HatioLab Inc. All rights reserved.
        * 수신을 위한 체크
        *******************
        */
-      _checkForReceive: function () {
+      _checkForReceive: function() {
         var searchFormData = this.$['search-form'].serializeMyForm();
         var comCd = searchFormData.com_cd;
 
         if (!comCd) {
           // 고객사를 선택하세요
-          var text = Things.DataGlobal.t('text.please_select_x', { x: Things.DataGlobal.t('menu.Company') });
-          this.openInfoMsg({ type: 'info', title: text, closeOnConfirm: true });
+          var text = Things.DataGlobal.t('text.please_select_x', {
+            x: Things.DataGlobal.t('menu.Company')
+          });
+          this.openInfoMsg({
+            type: 'info',
+            title: text,
+            closeOnConfirm: true
+          });
         }
 
         return comCd;
@@ -108,7 +113,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _receiveSku: function (event) {
+      _receiveSku: function(event) {
         this._realReceiveSku(event);
       },
 
@@ -117,7 +122,7 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _realReceiveSku: function (event) {
+      _realReceiveSku: function(event) {
         var comCd = event.detail.com_cd;
         var skuCount = event.detail.sku_count;
         var bcrCount = event.detail.barcd_count;
@@ -125,21 +130,37 @@ Copyright © HatioLab Inc. All rights reserved.
 
         if (skuCount == 0 && bcrCount == 0 && weightCount == 0) {
           // 수신할 상품 정보가 없습니다
-          var text = Things.DataGlobal.t('text.VALUE_IS_NOT_EXIST', { value: Things.DataGlobal.t('menu.SKU') })
-          this.openInfoMsg({ type: 'info', title: text, closeOnConfirm: true });
+          var text = Things.DataGlobal.t('text.VALUE_IS_NOT_EXIST', {
+            value: Things.DataGlobal.t('menu.SKU')
+          })
+          this.openInfoMsg({
+            type: 'info',
+            title: text,
+            closeOnConfirm: true
+          });
 
         } else {
           var ajax = this.$['receive-sku-ajax'];
           var title = Things.DataGlobal.t('button.receive');
           // 상품 수량: [1],바코드 수량: [2] 수신하시겠습니까?
-          var text = Things.DataGlobal.t('label.x_qty', { x: Things.DataGlobal.t('menu.SKU') }); // 상품 건수
+          var text = Things.DataGlobal.t('label.x_qty', {
+            x: Things.DataGlobal.t('menu.SKU')
+          }); // 상품 건수
           text = text + ': [' + skuCount + '],';
-          text = text + Things.DataGlobal.t('label.x_qty', { x: Things.DataGlobal.t('label.barcode') }); // 바코드 건수
-          text = text + ': [' + bcrCount + '] \n' + Things.DataGlobal.t('text.Sure to X', { x: title });
+          text = text + Things.DataGlobal.t('label.x_qty', {
+            x: Things.DataGlobal.t('label.barcode')
+          }); // 바코드 건수
+          text = text + ': [' + bcrCount + '] \n' + Things.DataGlobal.t('text.Sure to X', {
+            x: title
+          });
 
           this.openConfirmMsg({
-            type: 'info', title: title, text: text, showCancelButton: true, closeOnConfirm: false
-          }, function () {
+            type: 'info',
+            title: title,
+            text: text,
+            showCancelButton: true,
+            closeOnConfirm: false
+          }, function() {
             this.openConfirmMsg({
               type: 'info',
               title: title,
@@ -157,9 +178,13 @@ Copyright © HatioLab Inc. All rights reserved.
        *******************
        * @param {Object} event
        */
-      _endReceivingSku: function (event) {
+      _endReceivingSku: function(event) {
         var text = Things.DataGlobal.t('text.Success to Process');
-        this.openInfoMsg({ type: 'info', title: text, closeOnConfirm: true });
+        this.openInfoMsg({
+          type: 'info',
+          title: text,
+          closeOnConfirm: true
+        });
       },
 
       /**
@@ -167,7 +192,7 @@ Copyright © HatioLab Inc. All rights reserved.
        ******************
        * @param {Object} event
        */
-      _showBarcode: function (event) {
+      _showBarcode: function(event) {
         var checkedSkuRow = this._getCheckedRow();
         if (!checkedSkuRow) return;
 
@@ -203,7 +228,7 @@ Copyright © HatioLab Inc. All rights reserved.
        * @description 체크한 그리드의 로우 오브젝트를 리턴함
        * 하나의 로우만 체크해야하며 복수 혹은 체크하지 않을 경우 팝업 출력
        */
-      _getCheckedRow: function () {
+      _getCheckedRow: function() {
         var gridObj = this.$['grid'].getGridObject();
         var checkedRows = gridObj.getCheckedRows();
 
