--- a/app/elements/logis/rtn-preprocess-assign-region-popup.html
+++ b/app/elements/logis/rtn-preprocess-assign-region-popup.html
@@ -1,11 +1,65 @@
-
+<!--
+@license
+Copyright © HatioLab Inc. All rights reserved.
+-->
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
-
+<!--
+## rtn-preprocess-assign-region-popup
+RTN 주문 가공 호기 지정 팝업
+-->
 
 <dom-module id="rtn-preprocess-assign-region-popup">
   <template>
-    <style>:host{@apply --layout-flex;@apply --layout-vertical;@apply --things-default-padding;--grid-gap:20px}.container{@apply --layout-flex;display:grid;grid-template:"a a" 50px "b d" 25px "c e" auto/calc(50% - calc(var(--grid-gap)/ 2)) calc(50% - calc(var(--grid-gap)/ 2));grid-row-gap:10px;grid-column-gap:var(--grid-gap)}#resource-form{grid-area:a}#grid-assigned-title{grid-area:b}#grid-assigned{grid-area:c}#grid-to-assign-title{grid-area:d}#grid-to-assign{grid-area:e}.margin-zero{margin:0}.padding-zero{padding:0}</style>
+    <style>
+      :host {
+        @apply --layout-flex;
+        @apply --layout-vertical;
+        @apply --things-default-padding;
+
+        --grid-gap: 20px;
+      }
+
+      .container {
+        @apply --layout-flex;
+        display: grid;
+        grid-template: "a a" 50px "b d" 25px "c e" auto / calc(50% - calc(var(--grid-gap) / 2)) calc(50% - calc(var(--grid-gap) / 2));
+        grid-row-gap: 10px;
+        grid-column-gap: var(--grid-gap);
+      }
+
+      #resource-form {
+        grid-area: a;
+      }
+
+      #grid-assigned-title {
+        grid-area: b;
+      }
+
+      #grid-assigned {
+        grid-area: c;
+      }
+
+      #grid-to-assign-title {
+        grid-area: d;
+      }
+
+      #grid-to-assign {
+        grid-area: e;
+      }
+
+      /* 바깥 여백 제거 */
+
+      .margin-zero {
+        margin: 0px;
+      }
+
+      /* 안쪽 여백 제거 */
+
+      .padding-zero {
+        padding: 0px;
+      }
+    </style>
 
     <things-ajax id="search-preprocessing-ajax" resource-url="order_preprocesses" resource-action="index" last-response="{{searchResponse}}">
     </things-ajax>
@@ -21,17 +75,265 @@
         <li>[[global.total_assigned_sku]]: [[searchResponse.items.length]]</li>
       </div>
 
-      <things-resource-grid id="grid-assigned" class="padding-zero" model="[[gridModel]]" columns="[[assignedGridColumns]]" data="[[searchResponse.items]]" fixed-column-count="0">
+      <things-resource-grid id="grid-assigned" class="padding-zero" model="[[gridModel]]" columns="[[assignedGridColumns]]" data="[[searchResponse.items]]"
+        fixed-column-count="0">
       </things-resource-grid>
 
       <div id="grid-to-assign-title">
         <li>[[global.total_to_assign_sku]]: [[toAssignItems.length]]</li>
       </div>
 
-      <things-resource-grid id="grid-to-assign" class="padding-zero" model="[[gridModel]]" columns="[[toAssignGridColumns]]" data="[[toAssignItems]]" fixed-column-count="0" buttons="[[buttons]]">
+      <things-resource-grid id="grid-to-assign" class="padding-zero" model="[[gridModel]]" columns="[[toAssignGridColumns]]" data="[[toAssignItems]]"
+        fixed-column-count="0" buttons="[[buttons]]">
       </things-resource-grid>
     </div>
   </template>
 
-  <script>Polymer({is:"rtn-preprocess-assign-region-popup",behaviors:[Things.MsgBoxBehavior],properties:{global:{type:Object,value:function(){return{total_assigned_sku:Things.DataGlobal.t("text.total_assigned_x",{x:Things.DataGlobal.t("label.sku")}),total_to_assign_sku:Things.DataGlobal.t("text.total_to_assign_x",{x:Things.DataGlobal.t("label.sku")})}}},formFields:{type:Array,value:function(){return[{label:Things.DataGlobal.t("label.region_cd"),name:"region_cd",type:"readonly"},{label:Things.DataGlobal.t("label.region_nm"),name:"region_nm",type:"readonly"}]}},batchId:{type:String},regionCd:{type:String},regionNm:{type:String},buttons:{type:Array,value:function(){return[{id:"assign_region",text:"assign_region"}]}},emptyButtons:{type:Array,value:[]},gridModel:{type:Array,value:[]},assignedGridColumns:{type:Array},toAssignGridColumns:{type:Array,value:[]},toAssignItems:{type:Array}},listeners:{"grid-assigned.things-grid-configure":"_onAssignedGridConfigure","grid-to-assign.things-grid-configure":"_onToAssignGridConfigure","grid-assigned.things-grid-configured":"_onAssignedGridConfigured","grid-to-assign.things-grid-configured":"_onToAssignGridConfigured","assign_region-tap":"_assignBtnTapped","assign-region-ajax.things-ajax-response":"_assignResponsed"},_onAssignedGridConfigure:function(n){this.assignedGridColumns&&this.assignedGridColumns.forEach(function(n){"batch_id"!=n.name&&"region_nm"!=n.name&&"loc_cd"!=n.name&&"zone_cd"!=n.name||(n.width=0)})},_onToAssignGridConfigure:function(n){this.toAssignGridColumns&&this.toAssignGridColumns.forEach(function(n){"batch_id"!=n.name&&"region_nm"!=n.name&&"loc_cd"!=n.name&&"zone_cd"!=n.name||(n.width=0)})},_onAssignedGridConfigured:function(n){this.searchAssignedItems();var e={region_cd:this.regionCd,region_nm:this.regionNm};this.$["resource-form"].setFormData(e)},_onToAssignGridConfigured:function(n){this.$["grid-to-assign"].getGridObject().checkAll()},searchAssignedItems:function(){var n=this.$["search-preprocessing-ajax"];n.queryFields=[{name:"batch_id",operator:"eq",value:this.batchId},{name:"region_cd",operator:"eq",value:this.regionCd}],n.generateRequest()},_assignBtnTapped:function(n){var e=this.$["assign-region-ajax"];e.resourceUrl="rtn_preprocess/"+this.batchId+"/assign_region/"+this.regionCd,e.body=this.getCheckedOrders(),e.generateRequest()},_assignResponsed:function(n){this.openConfirmMsg({type:"info",title:Things.DataGlobal.t("button.assign_region"),text:Things.DataGlobal.t("text.Success to Process")},function(){this.fire("things-dialog-close")}.bind(this))},getCheckedOrders:function(){return this.toAssignItems}})</script>
+  <script>
+    Polymer({
+      is: 'rtn-preprocess-assign-region-popup',
+
+      behaviors: [
+        Things.MsgBoxBehavior
+      ],
+
+      properties: {
+        global: {
+          type: Object,
+          value: function () {
+            return {
+              total_assigned_sku: Things.DataGlobal.t('text.total_assigned_x', { x: Things.DataGlobal.t('label.sku') }),
+              total_to_assign_sku: Things.DataGlobal.t('text.total_to_assign_x', { x: Things.DataGlobal.t('label.sku') })
+            };
+          }
+        },
+        /**
+          * 폼 필드
+          *****************
+          * @type {Array}
+          */
+        formFields: {
+          type: Array,
+          value: function () {
+            return [{
+              label: Things.DataGlobal.t('label.equip_cd'),
+              name: 'equip_cd',
+              type: 'readonly'
+            }, {
+              label: Things.DataGlobal.t('label.equip_nm'),
+              name: 'equip_nm',
+              type: 'readonly'
+            }];
+          }
+        },
+
+        /**
+          * Job Batch ID
+          *******
+          * @type {Array}
+          */
+        batchId: {
+          type: String
+        },
+
+        /**
+          * 호기 코드
+          ************
+          * @type {Array}
+          */
+        equipCd: {
+          type: String
+        },
+
+				/**
+ 				* 호기 명
+ 				************
+ 				* @type {Array}
+ 				*/
+        equipNm: {
+          type: String
+        },
+
+        /**
+          * 지정할 그리드의 버튼
+          *******
+          * @type {Array}
+          */
+        buttons: {
+          type: Array,
+          value: function () {
+            return [{
+              id: 'assign_region',
+              text: 'assign_region'
+            }];
+          }
+        },
+
+        /**
+          * 빈 버튼
+          *******
+          * @type {Array}
+          */
+        emptyButtons: {
+          type: Array,
+          value: []
+        },
+
+        /**
+          * 그리드 모델
+          *******
+          * @type {Array}
+          */
+        gridModel: {
+          type: Array,
+          value: []
+        },
+
+        /**
+          * 호기를 지정한 그리드 컬럼
+          *******
+          * @type {Array}
+          */
+        assignedGridColumns: {
+          type: Array
+        },
+
+        /**
+          * 호기를 지정할 그리드 컬럼
+          *******
+          * @type {Array}
+          */
+        toAssignGridColumns: {
+          type: Array,
+          value: []
+        },
+
+        /**
+          * 호기를 지정할 그리드의 데이터
+          *******
+          * @type {Array}
+          */
+        toAssignItems: {
+          type: Array
+        }
+      },
+
+      listeners: {
+        'grid-assigned.things-grid-configure': '_onAssignedGridConfigure',
+        'grid-to-assign.things-grid-configure': '_onToAssignGridConfigure',
+        'grid-assigned.things-grid-configured': '_onAssignedGridConfigured',
+        'grid-to-assign.things-grid-configured': '_onToAssignGridConfigured',
+        'assign_region-tap': '_assignBtnTapped',
+        'assign-region-ajax.things-ajax-response': '_assignResponsed'
+      },
+
+      /**
+             * 지정한 호기 그리드 구성 이후 ...
+             **********
+             * @param {Object} event
+             */
+      _onAssignedGridConfigure: function (event) {
+        if (!this.assignedGridColumns) return;
+
+        this.assignedGridColumns.forEach(function (column) {
+          if (column.name == 'batch_id' || column.name == 'equip_nm' || column.name == 'loc_cd' || column.name == 'zone_cd') {
+            column.width = 0;
+          }
+        });
+      },
+
+      /**
+             * 지정할 호기 그리드 구성 이후 ...
+             **********
+             * @param {Object} event
+             */
+      _onToAssignGridConfigure: function (event) {
+        if (!this.toAssignGridColumns) return;
+
+        this.toAssignGridColumns.forEach(function (column) {
+          if (column.name == 'batch_id' || column.name == 'equip_nm' || column.name == 'loc_cd' || column.name == 'zone_cd') {
+            column.width = 0;
+          }
+        });
+      },
+
+      /**
+        * 지정한 호기 그리드 구성 이후 ...
+        **********
+        * @param {Object} event
+        */
+      _onAssignedGridConfigured: function (event) {
+        this.searchAssignedItems();
+        var formData = { equip_cd: this.equipCd, equip_nm: this.equipNm };
+        this.$['resource-form'].setFormData(formData);
+      },
+
+      /**
+        * 지정할 호기 그리드 구성 이후 ...
+        **********
+        * @param {Object} event
+        */
+      _onToAssignGridConfigured: function (event) {
+        var grid = this.$['grid-to-assign'];
+        grid.getGridObject().checkAll();
+      },
+
+      /**
+        * 지정한 호기 거래처 리스트 조회
+        **********
+        * @param {Object} event
+        */
+      searchAssignedItems: function () {
+        var searchAjax = this.$['search-preprocessing-ajax'];
+        searchAjax.queryFields = [{
+          name: 'batch_id', operator: 'eq', value: this.batchId
+        }, {
+          name: 'equip_cd', operator: 'eq', value: this.equipCd
+        }];
+        searchAjax.generateRequest();
+      },
+
+      /**
+        * 호기 지정 버튼 탭 핸들러
+        **********
+        * @param {Object} event
+        */
+      _assignBtnTapped: function (event) {
+        var assignRegionAjax = this.$['assign-region-ajax'];
+        assignRegionAjax.resourceUrl = 'rtn_preprocess/' + this.batchId + '/assign_region/' + this.equipCd;
+        assignRegionAjax.body = this.getCheckedOrders();
+        assignRegionAjax.generateRequest();
+      },
+
+      /**
+        * 호기 지정 완료 이 후
+        **********
+        * @param {Object} event
+        */
+      _assignResponsed: function (event) {
+        this.openConfirmMsg({
+          type: 'info',
+          title: Things.DataGlobal.t('button.assign_region'),
+          text: Things.DataGlobal.t('text.Success to Process')
+        }, function () {
+          this.fire('things-dialog-close');
+        }.bind(this));
+      },
+
+      /**
+        * 호기 지정 요청 데이터
+        **********
+        * @param {Object} event
+        */
+      getCheckedOrders: function () {
+				/*var grid = this.$['grid-to-assign'];
+					var rows = grid.getGridObject().getCheckedRows();
+					var rowObjects = rows.map(function(row) {
+					return row.getRowObject();
+				});
+				return rowObjects;*/
+        return this.toAssignItems;
+      }
+    });
+  </script>
 </dom-module>
