작업 지시 버튼 연결
작업 지시 버튼 연결 및 팝업 연결

--- a/app/elements/logis/job-batch-instruct-popup.html
+++ b/app/elements/logis/job-batch-instruct-popup.html
@@ -41,7 +41,7 @@ Copyright © HatioLab Inc. All rights reserved.
 		<!-- 주문 가공 완료 정보 조회 Ajax -->
 		<things-ajax
 			id="job-list-ajax"
-			resource-url="job_batch/:id/preprocess"
+			resource-url="job_batches/:id/instruction_data"
 			resource-id="[[batchId]]"
 			content-type="application/json">
 		</things-ajax>
