--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -60,7 +60,7 @@ Copyright © HatioLab Inc. All rights reserved.
     </things-ajax>
 
     <!-- 작업 지시 전 호기 상태 확인  -->
-    <things-ajax id="instruct-job-region-check-ajax" resource-url="job_batch/:id/check_region" resource-action="index">
+    <things-ajax id="instruct-job-rack-check-ajax" resource-url="job_batch/:id/check_region" resource-action="index">
     </things-ajax>
 
     <!-- 작업 지시 취소 Ajax -->
@@ -150,7 +150,7 @@ Copyright © HatioLab Inc. All rights reserved.
         'complete-job-ajax.things-ajax-error': '_jobCompleteError', // '작업 완료' 처리 실패시
         'group-complete-batch-ajax.things-ajax-response': '_groupCompleteResponsed', // '그룹 마감' 처리 완료시
         'group-complete-batch-ajax.things-ajax-error': '_groupCompleteError', // '그룹 마감' 처리 실패시
-        'instruct-job-region-check-ajax.things-ajax-response': '_transactionInstructRegionCheckCompleted' // '작업 지시 호기 체크' 처리 완료시
+        'instruct-job-rack-check-ajax.things-ajax-response': '_transactionInstructRackCheckCompleted' // '작업 지시 호기 체크' 처리 완료시
       },
 
       /**
@@ -443,9 +443,10 @@ Copyright © HatioLab Inc. All rights reserved.
               case 'DAS':
               case 'RTN':
                 {
-                  var ajax = this.$['instruct-job-region-check-ajax'];
-                  ajax.resourceId = checkedRow.id;
-                  ajax.generateRequest();
+                //  var ajax = this.$['instruct-job-rack-check-ajax'];
+                //  ajax.resourceId = checkedRow.id;
+                //  ajax.generateRequest();
+                  this._transactionInstructRackCheckCompleted();
                 }
                 break;
             }
@@ -819,29 +820,21 @@ Copyright © HatioLab Inc. All rights reserved.
        **************
        * @param {Object} event
        */
-      _transactionInstructRegionCheckCompleted: function(event) {
-        // 가상 호기가 아니면 작업 지시 팝업 open
-        if (event.detail.virtual_flag == false) {
-          var checkedRow = this._checkedGridRow();
-          var jobInstructPopup = this.createBatchInstructPopup(checkedRow);
+      _transactionInstructRackCheckCompleted: function(event) { 
+        var checkedRow = this._checkedGridRow();
+        var jobInstructPopup = this.createBatchInstructPopup(checkedRow);
 
-          var closeCallback = function() {
-            this.refreshData();
-          }.bind(this);
+        var closeCallback = function() {
+          this.refreshData();
+        }.bind(this);
 
-          // 작업 지시 팝업을 표시
-          this.fire('things-open-custom-size-dialog', {
-            view: jobInstructPopup,
-            modal: true,
-            dialogSize: 'large',
-            closeCallback: closeCallback
-          });
-
-        } else {
-          // 가상호기인 경우 상태만 작업 실행 상태로 update
-          var title = Things.DataGlobal.t('button.job_instruct');
-          this._confirmTransaction(event.detail.id, 'instruct-job-ajax', title);
-        }
+        // 작업 지시 팝업을 표시
+        this.fire('things-open-custom-size-dialog', {
+          view: jobInstructPopup,
+          modal: true,
+          dialogSize: 'large',
+          closeCallback: closeCallback
+        });    
       },
 
       /**
